[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/hud/abilities/ability_description_slices.png" type="Texture" id=1]
[ext_resource path="res://menu/hud/abilities/ability_description.gd" type="Script" id=2]

[node name="AbilityDescription" type="Control"]
margin_left = -30.0
margin_right = 30.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 30, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = -200.0
margin_right = 180.0
grow_vertical = 0
rect_pivot_offset = Vector2( 180, 200 )
texture = ExtResource( 1 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityName" type="Label" parent="NinePatchRect"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 16.0
margin_top = 16.0
text = "[Q] Pokazivac"

[node name="AbilityDescription" type="RichTextLabel" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 48.0
margin_right = -16.0
margin_bottom = -48.0
bbcode_enabled = true
bbcode_text = "Marin postavlja pokazivac
na zemlju i taj pokazivac pocinje da udara u protivnike u blizini. Posle 5 ispucaja, pokazivac eksplodira i salje 8 heksadecimalnih karaktera
na sve strane koji rade damage"
text = "Marin postavlja pokazivac
na zemlju i taj pokazivac pocinje da udara u protivnike u blizini. Posle 5 ispucaja, pokazivac eksplodira i salje 8 heksadecimalnih karaktera
na sve strane koji rade damage"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityCooldown" type="Label" parent="NinePatchRect"]
modulate = Color( 0.184314, 1, 0, 1 )
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
text = "10.0s"
align = 2

[node name="AbilityLevel" type="Label" parent="NinePatchRect"]
modulate = Color( 1, 0.0392157, 0.623529, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "0/5"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AbilityManaCost" type="Label" parent="NinePatchRect"]
modulate = Color( 0, 0.423529, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
text = "80 mana"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
